--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 spring.application.name=attendance-register
+
+# Server configuration
+server.port=8025
+
+# Database configuration (PostgreSQL)
+spring.datasource.url=jdbc:postgresql://localhost:5433/ear_db
+spring.datasource.username=postgres
+spring.datasource.password=@ticul8ing
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate (JPA) configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# HikariCP Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=5000
+spring.datasource.hikari.pool-name=EmployeeAttendancePool
+spring.datasource.hikari.auto-commit=true
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.com.crowninteractive=DEBUG
