--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 POSTGRES_DB=ear_db
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=@ticul8ing
+POSTGRES_USER=[YOUR_DB_USERNAME]
+POSTGRES_PASSWORD=[YOUR_DB_PASSWORD]
